# turboquant_implementation

./: LICENSE  README.md  pyproject.toml
artifacts/codebooks/: codebook_d16_b1.json  codebook_d16_b3.json  codebook_d384_b1.json  codebook_d384_b3.json  codebook_d64_b1.json  codebook_d64_b2.json  codebook_d8_b1.json
artifacts/demo/: database.npy  documents.txt  queries.npy  queries.txt  report.json
artifacts/demo_ag_news/: docs.txt  queries.txt
artifacts/demo_ag_news_500/: database.npy  documents.txt  queries.npy  queries.txt  report.json
scripts/: embed_and_benchmark.py  mistral_benchmark.py
src/turboquant/: __init__.py  baselines.py  cli.py  codebooks.py  data.py  distributions.py  packing.py  quantizers.py  reports.py  rotation.py  search.py  types.py
src/turboquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_codebooks.py  test_data.py  test_packing.py  test_quantizers.py  test_reports.py
